<resources>
    <string name="app_name">HealEmGood</string>
    <string name="userid_text">UserId</string>
    <string name="password_text">Password</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="email_text">Email Address</string>
    <string name="phonenumber_text">Phone Number</string>
    <string name="confirmpassword_text">Confirm Password</string>
    <string name="user_fullname">Tianqi Wang</string>
    <string name="user_id">twang2</string>
    <string name="user_avatar">user\'s avatar</string>
    <string name="user_birthday">March 3, 1998</string>
    <string name="hint_phone">Phone: 1234567890</string>
    <string name="date">Date</string>
    <string name="hint_email">Email: abc@mail.ca</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="request">Request</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <string name="quick_view">Quick View</string>
    <string name="generatecode">Generate Code</string>
    <string name="create_record">Create Record</string>
    <string name="Continue">Continue</string>
    <string name="body_map_to_click">click body map</string>
    <string name="title">Title</string>
    <string name="problem">Problem</string>
    <string name="hint_your_problem">your problem</string>
    <string name="_autogenerated">!autoGenerated</string>
    <string name="description">Description</string>
    <string name="hint_specify_details">specify details</string>
    <string name="add_location_button">Add Location</string>
    <string name="todo">Todo</string>
    <string name="back">Back</string>
    <string name="problem_tiltle">Problem Tiltle</string>
    <string name="slide_show">Slide Show</string>
    <string name="view_comment">View Comment</string>
    <string name="record_map">Record Map</string>
    <string name="full_history_problem">Full History (problem)</string>
    <string name="delete">Delete</string>
    <string name="your_problem">your problem</string>
    <string name="Default">Default</string>
    <string name="geo_location">Geo-Location</string>
    <string name="body_location">Body-Location</string>
    <string name="search">Search</string>
    <string name="requests">Requests</string>
    <string name="reject">Reject</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_contact">Contact</string>
    <string name="user_phone_number">780-123-4567</string>
    <string name="user_email">email@website.ca</string>
    <string name="my_patients">My Patients</string>
    <string name="problem_title_add_comment">Hand Problem</string>
    <string name="recent_patients">Recent Patients</string>
    <string name="add_patients">Add Patients</string>
    <string name="addPatient">Add Patients</string>
    <string name="hint_message">write something here...</string>
    <string name="sendRequest">Send Request</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="scanQRcodemain">Your QR code</string>
    <string name="scanQRCodeLogin">Sign in Using a QR code</string>
    <string name="scannewQRCode">Scan a QR code</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="qrCode">Focus the Camera on the QR code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_problem">Create Problem</string>
    <string name="new_problem">New Problem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_all_problem">PatientAllProblemActivity</string>
    <string name="edit_location">Edit Location</string>
    <string name="title_activity_patient_scan_qrcode">PatientScanQRCode</string>
    <string name="map_mode">Map Mode</string>
    <string name="view_location">View Location</string>
    <string name="add">Add</string>
    <string name="body">Body</string>

    <string-array name="search_array">
        <item>Record</item>
        <item>Problem</item>

    </string-array>
    <string name="title_activity_care_provider_all_patient">CareProviderAllPatientActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="qr_code">QR Code</string>
    <string name="add_patient">Add Patient</string>
    <string name="detail">Detail</string>
    <string name="body_map">Body Map</string>
    <string name="patient">Patient</string>
    <string name="care_provider">Care Provider</string>
    <string name="Create">create</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="logo">logo</string>
    <string name="pick_date">Pick Date</string>
    <string name="photo">Photo</string>
    <string name="label">Label</string>
    <string name="my_header_title">My header title</string>
    <string name="author">Author</string>
    <string name="keywords">keywords</string>
    <string name="icon">icon</string>
    <string name="most_recent_date">Most recent Date</string>
    <string name="number_of_records">Number of Records</string>

</resources>
