<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_qrcode"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/qr_code" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/map_mode" />
    <item
        android:id="@+id/navigation_body"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/body_map" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/user" />
</menu>