<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/home" />
        <item
            android:id="@+id/navigation_qrcode"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/qr_code" />

        <item
            android:id="@+id/navigation_patients"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/add_patient" />
        <item
            android:id="@+id/navigation_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search" />
        <item
            android:id="@+id/navigation_user"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/user" />
    </group>
</menu>