<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AlertDialog.AppCompat.Light">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/muli"
        android:text="@string/most_recent_date"
        android:textColor="@color/cast_expanded_controller_background_color"
        app:layout_constraintEnd_toStartOf="@+id/deleteImageView"
        app:layout_constraintStart_toEndOf="@+id/iconImageView"
        app:layout_constraintTop_toBottomOf="@+id/countTextView" />

    <TextView
        android:id="@+id/problemNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:autoText="false"
        android:fontFamily="@font/muli"
        android:text="@string/problem_tiltle"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/deleteImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iconImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"

        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/muli"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/number_of_records"
        android:textAllCaps="false"
        android:textColor="@color/cast_expanded_controller_progress_text_color"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/deleteImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iconImageView"
        app:layout_constraintTop_toBottomOf="@+id/problemNameTextView" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="89dp"
        android:layout_height="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/problem_icon" />

    <ImageView
        android:id="@+id/deleteImageView"
        android:layout_width="46dp"
        android:layout_height="94dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete_icon" />

</android.support.constraint.ConstraintLayout>